<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Proximity Recalibrator</string>
    <string name="lt_value" translatable="false">0</string>
    <string name="ht_value" translatable="false">255</string>
    <string name="apply">Start</string>
    <string name="prox_value">Not running</string>
    <string name="lt_label">Low Threshold</string>
    <string name="ht_label">High Threshold</string>
    <string name="ork">Proximity sensor monitor:</string>
    <string name="far">FAR</string>
    <string name="errorps_cadc">Error when writing to ps_kadc</string>
    <string name="near">NEAR</string>
    <string name="kernelnotsupported">Kernel not supported!</string>
    <string name="unknown">UNKNOWN</string>
    <string name="title">Proximity Sensor Recalibrator by leppie</string>
    <string name="empty"> </string>
    <string name="recalibrated">Proximity sensor recalibrated:</string>
</resources>
