<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_gravity="center|fill"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout android:id="@+id/gridView1"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingTop="15dp">
        <TextView android:text="@string/lt_label" android:id="@+id/textView1"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView android:layout_height="wrap_content"
            android:text="@string/lt_value"
            android:id="@+id/lt_value" android:layout_width="wrap_content"
            android:gravity="right" />
    </LinearLayout>

    <SeekBar android:layout_height="wrap_content" android:id="@+id/lt_slider"
        android:max="50" android:layout_width="fill_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <LinearLayout android:id="@+id/gridView2"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingTop="15dp">
        <TextView android:text="@string/ht_label" android:id="@+id/textView2"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1" />
        <TextView android:layout_height="wrap_content"
            android:layout_gravity="center" android:text="@string/ht_value"
            android:id="@+id/ht_value" android:layout_width="wrap_content"
            android:gravity="right" />
    </LinearLayout>

    <SeekBar android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/ht_slider"
        android:max="50"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <LinearLayout android:id="@+id/gridView3"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/ork" />

        <TextView android:text="@string/prox_value" android:id="@+id/ps_status"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <Button android:layout_height="wrap_content"
        android:text="@string/apply" android:id="@+id/applyBut"
        android:layout_width="fill_parent" />

    <TextView android:id="@+id/textView4" android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/title"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center|bottom" />

</LinearLayout>
